fixed line-break on floor-plans

--- a/src/components/view-floor-plan.css
+++ b/src/components/view-floor-plan.css
@@ -40,7 +40,7 @@
 .line-break {
   border-bottom: 1.5px solid #00abf0;
   opacity: 0.4;
-  width: 210%;
+  width: 205%;
 }
 
 table {
